[tool.poetry]
name = "repoman"
version = "0.1.0"
description = ""
authors = ["Peter Borocz <peter.borocz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.15.0"
click = "^8.0.3"
pdfplumber = "^0.5.28"
pyfiglet = "^0.8.post1"
prompt-toolkit = "^3.0.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
